--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/compiler-cli": "^19.0.5",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^22.10.2",
+    "@types/uuid": "^10.0.0",
     "express": "^4.21.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
